[AMD] 6.10 green blocks on fullscreen toggle video playing
I experience green blocks problem during full screen toggling while watching video on MPV/Youtube. It didn't cause my system freeze but I guess there are bug to be fixed. Here is the screenshot:
UPDATE: I toggled fullscreen while playing a local video using MPV. And eventually the system freeze. I collected the error message from kern.log
after a reboot:
kern.log
2024-06-20T13:38:39.647363+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: [mmhub] page fault (src_id:0 ring:8 vmid:2 pasid:32785)
2024-06-20T13:38:39.647397+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: in process mpv pid 8818 thread mpv:cs0 pid 8829
2024-06-20T13:38:39.647400+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: in page starting at address 0x0000800108000000 from client 0x12 (VMC)
2024-06-20T13:38:39.647402+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: MMVM_L2_PROTECTION_FAULT_STATUS:0x00203811
2024-06-20T13:38:39.647404+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: Faulty UTCL2 client ID: VCN (0x1c)
2024-06-20T13:38:39.647405+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: MORE_FAULTS: 0x1
2024-06-20T13:38:39.647407+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: WALKER_ERROR: 0x0
2024-06-20T13:38:39.647426+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: PERMISSION_FAULTS: 0x1
2024-06-20T13:38:39.647427+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: MAPPING_ERROR: 0x0
2024-06-20T13:38:39.647429+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: RW: 0x0
2024-06-20T13:38:39.647431+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: [mmhub] page fault (src_id:0 ring:8 vmid:2 pasid:32785)
2024-06-20T13:38:39.647433+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: in process mpv pid 8818 thread mpv:cs0 pid 8829
2024-06-20T13:38:39.647434+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: in page starting at address 0x0000800108177000 from client 0x12 (VMC)
2024-06-20T13:38:39.647436+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: MMVM_L2_PROTECTION_FAULT_STATUS:0x00000000
2024-06-20T13:38:39.647437+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: Faulty UTCL2 client ID: MP0 (0x0)
2024-06-20T13:38:39.647439+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: MORE_FAULTS: 0x0
2024-06-20T13:38:39.647440+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: WALKER_ERROR: 0x0
2024-06-20T13:38:39.647442+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: PERMISSION_FAULTS: 0x0
2024-06-20T13:38:39.647443+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: MAPPING_ERROR: 0x0
2024-06-20T13:38:39.647445+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: RW: 0x0
2024-06-20T13:38:49.733670+08:00 kernel: [drm:amdgpu_job_timedout [amdgpu]] *ERROR* ring vcn_dec_0 timeout, signaled seq=1640, emitted seq=1641
2024-06-20T13:38:49.733691+08:00 kernel: [drm:amdgpu_job_timedout [amdgpu]] *ERROR* Process information: process mpv pid 8818 thread mpv:cs0 pid 8829
2024-06-20T13:38:49.733692+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: GPU reset begin!
2024-06-20T13:38:50.464352+08:00 kernel: [drm] Register(0) [mmUVD_POWER_STATUS] failed to reach value 0x00000001 != 0x00000002n
2024-06-20T13:38:50.747355+08:00 kernel: [drm] Register(0) [mmUVD_RBC_RB_RPTR] failed to reach value 0x00000080 != 0x00000020n
2024-06-20T13:38:50.801348+08:00 kernel: [drm] Register(0) [mmUVD_POWER_STATUS] failed to reach value 0x00000001 != 0x00000002n
2024-06-20T13:38:50.801367+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: MODE2 reset
2024-06-20T13:38:50.812353+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: GPU reset succeeded, trying to resume
2024-06-20T13:38:50.813354+08:00 kernel: [drm] PCIE GART of 1024M enabled (table at 0x000000F41FC00000).
2024-06-20T13:38:50.813369+08:00 kernel: [drm] VRAM is lost due to GPU reset!
2024-06-20T13:38:50.813372+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: PSP is resuming...
2024-06-20T13:38:50.835359+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: reserve 0xa00000 from 0xf41e000000 for PSP TMR
2024-06-20T13:38:51.164348+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: RAS: optional ras ta ucode is not available
2024-06-20T13:38:51.176355+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: RAP: optional rap ta ucode is not available
2024-06-20T13:38:51.176371+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: SECUREDISPLAY: securedisplay ta ucode is not available
2024-06-20T13:38:51.176373+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: SMU is resuming...
2024-06-20T13:38:51.179342+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: SMU is resumed successfully!
2024-06-20T13:38:51.180343+08:00 kernel: [drm] DMUB hardware initialized: version=0x04000044
2024-06-20T13:38:51.839377+08:00 kernel: [drm] kiq ring mec 2 pipe 1 q 0
2024-06-20T13:38:52.126350+08:00 kernel: amdgpu 0000:03:00.0: [drm:amdgpu_ring_test_helper [amdgpu]] *ERROR* ring vcn_dec_0 test failed (-110)
2024-06-20T13:38:52.126365+08:00 kernel: [drm:amdgpu_device_ip_resume_phase2 [amdgpu]] *ERROR* resume of IP block <vcn_v3_0> failed -110
2024-06-20T13:38:52.126368+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: GPU reset(1) failed
2024-06-20T13:38:52.126370+08:00 kernel: amdgpu 0000:03:00.0: amdgpu: GPU reset end with ret = -110
2024-06-20T13:38:52.126372+08:00 kernel: [drm:amdgpu_job_timedout [amdgpu]] *ERROR* GPU Recovery Failed: -110
2024-06-20T13:38:53.436358+08:00 kernel: [drm] Register(0) [mmUVD_POWER_STATUS] failed to reach value 0x00000001 != 0x00000002n
2024-06-20T13:38:53.720516+08:00 kernel: [drm] Register(0) [mmUVD_RBC_RB_RPTR] failed to reach value 0x00000010 != 0x00000000n
But still, I am not sure if the GPU reset is caused by future commits because I don't see any other GPU reset during bisection. But I got this GPU reset problem while watching video from 6.10-rc1 til 6.10-rc4.
I experience the green blocks problem since 6.10-rc1 and the problem is still on 6.10-rc4. And it didn't happen in kernel 6.9.X.
Hardware description:
- CPU: AMD Ryzen 7 6800U
- GPU: AMD Radeon 680M
- System Memory: 16GB
- Display: 2880 x 1800@60
- Type of Display Connection: Laptop Display
System information:
- Distro name and Version: Ubuntu Linux 24.04
- Kernel version: 6.10-rc4
How to reproduce the issue:
- Open Firefox, go to Youtube Video (I use this video during my test but any video would do)
- Keep toggling fullscreen by continuously pressing 'F' on the keyboard. I would see the green block after 1-2 minutes of video playing.